// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMailPayloads create correct payload for blinded recipients of the message: blinded bcc1 1`] = `
Object {
  "Content": Object {
    "data": Array [
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      45,
      98,
      99,
      99,
      49,
      64,
      109,
      97,
      105,
      108,
      99,
      104,
      97,
      105,
      110,
      46,
      99,
      111,
      109,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 26,
    "ContentSignature": Uint8Array [
      50,
      37,
      85,
      13,
      45,
      17,
      182,
      48,
      220,
      77,
      210,
      139,
      11,
      60,
      18,
      247,
      219,
      74,
      160,
      33,
      52,
      245,
      108,
      105,
      40,
      234,
      143,
      99,
      58,
      45,
      104,
      199,
      80,
      155,
      17,
      183,
      218,
      161,
      94,
      63,
      18,
      45,
      65,
      231,
      16,
      16,
      238,
      53,
      176,
      136,
      59,
      123,
      76,
      58,
      0,
      253,
      214,
      146,
      148,
      133,
      114,
      165,
      189,
      6,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;

exports[`createMailPayloads create correct payload for blinded recipients of the message: blinded bcc2 1`] = `
Object {
  "Content": Object {
    "data": Array [
      99,
      111,
      110,
      116,
      101,
      110,
      116,
      45,
      98,
      99,
      99,
      50,
      64,
      109,
      97,
      105,
      108,
      99,
      104,
      97,
      105,
      110,
      46,
      99,
      111,
      109,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 26,
    "ContentSignature": Uint8Array [
      33,
      83,
      24,
      41,
      120,
      229,
      141,
      218,
      150,
      195,
      41,
      8,
      27,
      57,
      6,
      81,
      108,
      88,
      27,
      243,
      71,
      131,
      212,
      13,
      156,
      9,
      72,
      130,
      108,
      163,
      128,
      109,
      127,
      116,
      214,
      82,
      13,
      230,
      157,
      0,
      2,
      2,
      235,
      12,
      135,
      184,
      206,
      210,
      10,
      112,
      142,
      149,
      237,
      111,
      95,
      142,
      220,
      169,
      230,
      84,
      23,
      46,
      13,
      14,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;

exports[`createMailPayloads create correct payload for sender of the message: original 1`] = `
Object {
  "Content": Object {
    "data": Array [
      111,
      114,
      105,
      103,
      105,
      110,
      97,
      108,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 8,
    "ContentSignature": Uint8Array [
      164,
      248,
      247,
      17,
      76,
      148,
      172,
      110,
      98,
      91,
      196,
      76,
      121,
      13,
      28,
      6,
      40,
      3,
      151,
      15,
      209,
      95,
      144,
      141,
      127,
      61,
      98,
      248,
      227,
      210,
      192,
      212,
      8,
      39,
      104,
      216,
      136,
      115,
      181,
      153,
      11,
      217,
      122,
      182,
      224,
      231,
      234,
      184,
      97,
      233,
      73,
      254,
      31,
      251,
      26,
      231,
      9,
      110,
      232,
      97,
      172,
      122,
      90,
      1,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;

exports[`createMailPayloads create correct payload for visible recipients of the message: visible 1`] = `
Object {
  "Content": Object {
    "data": Array [
      118,
      105,
      115,
      105,
      98,
      108,
      101,
    ],
    "type": "Buffer",
  },
  "Headers": Object {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 7,
    "ContentSignature": Uint8Array [
      7,
      255,
      141,
      135,
      111,
      3,
      200,
      216,
      13,
      125,
      44,
      9,
      222,
      238,
      224,
      214,
      220,
      226,
      86,
      164,
      5,
      16,
      221,
      151,
      162,
      169,
      90,
      223,
      52,
      27,
      107,
      132,
      241,
      181,
      38,
      220,
      178,
      199,
      128,
      76,
      2,
      122,
      125,
      193,
      165,
      255,
      11,
      185,
      48,
      205,
      5,
      12,
      133,
      111,
      202,
      75,
      125,
      58,
      240,
      50,
      207,
      170,
      210,
      14,
    ],
    "ContentType": "message/x.mailchain",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        215,
        190,
        70,
        167,
        83,
        44,
        32,
        26,
        113,
        228,
        19,
        133,
        8,
        32,
        97,
        216,
        16,
        67,
        139,
        65,
        185,
        41,
        147,
        108,
        27,
        108,
        75,
        48,
        31,
        33,
        50,
        155,
      ],
      "curve": "ed25519",
    },
  },
}
`;
